--- a/app/ui/style.css
+++ b/app/ui/style.css
@@ -13,7 +13,8 @@ html, body {
 	display: flex;
 	flex: 1;
 	flex-direction: column;
-	background: var(--ag-color-white);
+    background: var(--ag-color-black);
+    color: var(--ag-color-white);
 	font-family: system-ui;
 }
 
@@ -111,4 +112,14 @@ find-menu {
 
 *:focus {
   outline: 2px solid var(--ag-color-green);
+}
+
+.footer {
+	width: 100%;
+	margin: 0;
+	padding: 10px;
+	background: brown;
+}
+.signin label{
+	font-size: 18px;
 }
