--- a/app/pages/assets/css/custom.css
+++ b/app/pages/assets/css/custom.css
@@ -1,6 +1,6 @@
 :root {
 --ag-color-purple: #6e2de5;
---ag-color-black: #111;
+--ag-color-black: #505050;
 --ag-color-white: #F2F2F2;
 --ag-color-green: #2de56e;
 }
@@ -95,4 +95,14 @@ h1 {
 #loom-close:focus,
 #loom-close.focus {
   text-decoration: none;
+}
+
+
+.signin-alert {
+    position: absolute;
+    left: 50%;
+    top: 20%;
+    transform: translate(-50%,0%);
+    width: 450px;
+    line-height: 2;
 }
