--- a/app/pages/assets/css/custom.css
+++ b/app/pages/assets/css/custom.css
@@ -82,7 +82,7 @@ h1 {
     right: 150px;
     position: absolute;
 }
-#loom-close {
+.loom-close {
     position: absolute;
     right: -24px;
     top: -10px;
@@ -91,9 +91,9 @@ h1 {
     font-weight: bolder;
 }
 
-#loom-close:hover,
-#loom-close:focus,
-#loom-close.focus {
+.loom-close:hover,
+.loom-close:focus,
+.loom-close.focus {
   text-decoration: none;
 }
 
