--- a/app/pages/assets/css/browser-history.css
+++ b/app/pages/assets/css/browser-history.css
@@ -62,6 +62,9 @@ body, html {
 .list-group-item {
     color: #8a8a8a;
 }
+.list-group-item:hover {    
+    cursor: pointer;
+}
 .list-group-item label {
     padding-right: 5px;
     color: #292929;
